# CrossPlatformClient

./: README.md
android/CrossPlatformClient/: settings.gradle
android/CrossPlatformClient/app/: build.gradle
android/CrossPlatformClient/app/src/main/: AndroidManifest.xml
android/CrossPlatformClient/app/src/main/java/com/client/: Constants.kt  FileUtils.kt  ListViewAdapter.java  ListViewAdapter.kt  ListViewItem.java  ListViewItem.kt  MainActivity.kt  SimpleFileReadActivity.kt  Utils.kt
android/CrossPlatformClient/app/src/main/res/drawable/: textview_border.xml
android/CrossPlatformClient/app/src/main/res/layout/: activity_main.xml  activity_simple_file_read.xml  list_item.xml
android/CrossPlatformClient/app/src/main/res/values/: arrays.xml  strings.xml
android/CrossPlatformClient/crossplatform/: CMakeLists.txt  build.gradle
android/CrossPlatformClient/crossplatform/src/main/: AndroidManifest.xml
android/CrossPlatformClient/crossplatform/src/main/cpp/: NativeRequest.cpp  NativeRequest.h  jni_main.cpp  jni_utils.cpp  jni_utils.h
android/CrossPlatformClient/crossplatform/src/main/java/com/client/crossplatform/: FileReader.java
android/CrossPlatformClient/gradle/wrapper/: gradle-wrapper.properties
src/: HttpRequest.h  Reader.cpp  Reader.h
